清卡 报工  分批

--- a/BarCodeSystem/BasicFile/Device/DeviceExcelImport_Window.xaml
+++ b/BarCodeSystem/BasicFile/Device/DeviceExcelImport_Window.xaml
@@ -30,6 +30,7 @@
                     <GridViewColumn Header="设备名称" DisplayMemberBinding="{Binding Path=D_Name}" Width="80"></GridViewColumn>
                     <GridViewColumn Header="设备数量" DisplayMemberBinding="{Binding Path=D_Amount}" Width="80"></GridViewColumn>
                     <GridViewColumn Header="设备条码" DisplayMemberBinding="{Binding Path=D_BarCode}" Width="80"></GridViewColumn>
+                    <GridViewColumn Header="设备型号" DisplayMemberBinding="{Binding Path=D_Version}" Width="80"></GridViewColumn>
                     <GridViewColumn Header="工作中心编码" DisplayMemberBinding="{Binding Path=D_Department_Code}" Width="100"></GridViewColumn>
                     <GridViewColumn Header="设备信息来源" DisplayMemberBinding="{Binding Path=D_SourceType_Show}" Width="100"></GridViewColumn>
                     <GridViewColumn Header="是否启用" DisplayMemberBinding="{Binding Path=D_IsValidated_Show}" Width="100"></GridViewColumn>
