--- a/BarCodeSystem/MainWindow.xaml
+++ b/BarCodeSystem/MainWindow.xaml
@@ -23,37 +23,40 @@
             <Menu DockPanel.Dock="Top"
                   Template="{StaticResource mycontroltemplate}" Name="System_Menu" IsEnabled="True" >
                 <MenuItem Name="item_SysManage"     Header="系统管理(_S)"  IsEnabled="True">
-                    <MenuItem Name="item_U9Account"  MenuItem.Click="item_U9Account_Click"  IsEnabled="False"     Header="U9账号导入(_D)"></MenuItem>
-                    <MenuItem Name="item_AccountAuthority" IsEnabled="False" Header="系统授权(_F)" MenuItem.Click="item_AccountAuthority_Click"></MenuItem>
+                    <MenuItem Name="item_U9Account"  MenuItem.Click="item_U9Account_Click"  IsEnabled="False"     Header="U9账号导入(快捷键 Alt + S + _D)"></MenuItem>
+                    <MenuItem Name="item_AccountAuthority" IsEnabled="False" Header="系统授权(快捷键 Alt + S + _F)" MenuItem.Click="item_AccountAuthority_Click"></MenuItem>
                     <Separator></Separator>
-                    <MenuItem Name="item_Close" Header="退出(_C)" MenuItem.Click="item_Close_Click"></MenuItem>
+                    <MenuItem Name="item_Close" Header="退出(快捷键 Alt + S + _C)" MenuItem.Click="item_Close_Click"></MenuItem>
                 </MenuItem>
-                <MenuItem Name="item_SysPara" Header="系统参数(_P)">
-                    <MenuItem Name="item_SysParaManage" IsEnabled="False" Click="item_SysParaManage_Click"   Header="组织信息(_M)"></MenuItem>
+                <MenuItem Name="item_SysPara" Header="系统参数(_Y)">
+                    <MenuItem Name="item_SysParaManage" IsEnabled="False" Click="item_SysParaManage_Click"   Header="组织信息(快捷键 Alt + Y + _M)"></MenuItem>
+                    <MenuItem Name="item_TechRouteImport" IsEnabled="True" Click="item_TechRouteImport_Click" Header="工艺路线初始化批量维护(快捷键 Alt + Y + _I)"></MenuItem>
                 </MenuItem>
                 <MenuItem Name="item_BasicFile"     Header="基础档案(_B)" >
-                    <MenuItem Name="item_WorkCenter" IsEnabled="False" Click="item_WorkCenterImport_Click"   Header="工作中心(_D)"></MenuItem>
-                    <MenuItem Name="item_StaffInfoManage"  IsEnabled="False" Click="item_StaffInfoManage_Click"    Header="员工信息管理(_G)"></MenuItem>
-                    <MenuItem Name="item_WorkTeamManage"   IsEnabled="False" Click="item_WorkTeamManage_Click"     Header="车间班组管理(_H)"></MenuItem>
-                    <MenuItem Name="item_BeltlineManage"   IsEnabled="False" Click="item_BeltlineManage_Click"     Header="生产线管理(_J)"  ></MenuItem>
-                    <MenuItem Name="item_WorkEquipManage"  IsEnabled="False" Click="item_WorkEquipManage_Click"   Header="设备管理(_K)"></MenuItem>
-                    <MenuItem Name="item_StockLocManage"   IsEnabled="False" Click="item_WarehouseManage_Click"  Header="仓库管理(_L)"></MenuItem>
-                    <MenuItem Name="item_QualityFileManage" IsEnabled="False" Click="item_QualityFileManage_Click" Header="质量问题原因(_Q)"></MenuItem>
-                    <MenuItem Name="item_QualitySort"  Click="item_QualitySort_Click" Header="质检分类(_O)"></MenuItem>
+                    <MenuItem Name="item_WorkCenter" IsEnabled="False" Click="item_WorkCenterImport_Click"   Header="工作中心(快捷键 Alt + B + _D)"></MenuItem>
+                    <MenuItem Name="item_StaffInfoManage"  IsEnabled="False" Click="item_StaffInfoManage_Click"    Header="员工信息管理(快捷键 Alt + B + _G)"></MenuItem>
+                    <MenuItem Name="item_WorkTeamManage"   IsEnabled="False" Click="item_WorkTeamManage_Click"     Header="车间班组管理(快捷键 Alt + B + _H)"></MenuItem>
+                    <MenuItem Name="item_BeltlineManage"   IsEnabled="False" Click="item_BeltlineManage_Click" Visibility="Collapsed"    Header="生产线管理(快捷键 Alt + B + _J)"  ></MenuItem>
+                    <MenuItem Name="item_WorkEquipManage"  IsEnabled="False" Click="item_WorkEquipManage_Click"   Header="设备管理(快捷键 Alt + B + _K)"></MenuItem>
+                    <MenuItem Name="item_StockLocManage"   IsEnabled="False" Click="item_WarehouseManage_Click"  Header="仓库管理(快捷键 Alt + B + _L)"></MenuItem>
+                    <MenuItem Name="item_QualityFileManage" IsEnabled="False" Click="item_QualityFileManage_Click" Header="质量问题原因(快捷键 Alt + B + _Q)"></MenuItem>
+                    <MenuItem Name="item_QualitySort"  Click="item_QualitySort_Click" Header="质检分类(快捷键 Alt + B + _O)"></MenuItem>
                 </MenuItem>
                 <MenuItem Name="item_MateAndRoute"  Header="物料和工艺路线(_M)">
-                    <MenuItem Name="item_MaterialManage"   IsEnabled="False" Click="item_MaterialManage_Click" Header="料品档案(_M)"></MenuItem>
-                    <MenuItem Name="item_ProcedureManage"  IsEnabled="False" Click="item_ProcedureManage_Click"  Header="工序管理(_P)"></MenuItem>
-                    <MenuItem Name="item_TechRouteManage"  IsEnabled="False" Click="item_TechRouteManage_Click" Header="工艺路线管理(_R)"></MenuItem>
-                    <MenuItem Name="item_DistFormula"      IsEnabled="False" Header="配额计算公式(_D)"></MenuItem>
-                    <MenuItem Name="item_WorkHourManage"   IsEnabled="False" Header="工时管理(_W)"></MenuItem>
+                    <MenuItem Name="item_MaterialManage"   IsEnabled="False" Click="item_MaterialManage_Click" Header="料品档案(快捷键 Alt + M + _M)"></MenuItem>
+                    <MenuItem Name="item_ProcedureManage"  IsEnabled="False" Click="item_ProcedureManage_Click"  Header="工序管理(快捷键 Alt + M + _P)"></MenuItem>
+                    <MenuItem Name="item_TechRouteManage"  IsEnabled="False" Click="item_TechRouteManage_Click" Header="工艺路线管理(快捷键 Alt + M + _R)"></MenuItem>
+                    <MenuItem Name="item_DistFormula"      IsEnabled="False" Header="配额计算公式(快捷键 Alt + M + _D)" Visibility="Collapsed"></MenuItem>
+                    <MenuItem Name="item_WorkHourManage"   IsEnabled="False" Header="工时管理(快捷键 Alt + M + _W)" Visibility="Collapsed"></MenuItem>
                 </MenuItem>
                 <MenuItem Name="item_ProdDispatch"  Header="生产订单及派工管理(_P)">
-                    <MenuItem Name="item_ProdOrderImport"  IsEnabled="False" Header="生产订单导入(_O)"></MenuItem>
-                    <MenuItem Name="item_WorkCardCompose" Click="item_WorkCardCompose_Click" IsEnabled="False" Header="流转卡编制(_C)"></MenuItem>
-                    <MenuItem Name="item_WorkCardReport"  Click="item_WorkCardReport_Click"    Header="流转卡报工(_R)"></MenuItem>
-                    <MenuItem Name="item_WorkCardInfo"     IsEnabled="False" Header="流转卡信息采集(_I)"></MenuItem>
-                    <MenuItem Name="item_FinishReport"     IsEnabled="False" Header="完工报告(_R)"></MenuItem>
+                    <MenuItem Name="item_ProdOrderImport"  IsEnabled="False" Header="生产订单导入(快捷键 Alt + P + _O)"></MenuItem>
+                    <MenuItem Name="item_WorkCardCompose" Click="item_WorkCardCompose_Click" IsEnabled="False" Header="流转卡编制(快捷键 Alt + P + _C)"></MenuItem>
+                    <MenuItem Name="item_WorkCardReport"  Click="item_WorkCardReport_Click"    Header="流转卡报工(快捷键 Alt + P + _R)"></MenuItem>
+                    <MenuItem Name="item_WorkCardDis"  Click="item_WorkCardDis_Click"    Header="流转卡分批(快捷键 Alt + P + _D)"></MenuItem>
+                    <MenuItem Name="item_WorkCardClean" Click="item_WorkCardClean_Click" Header="流传卡清卡(快捷键 Alt + P + _Q)"></MenuItem>
+                    <MenuItem Name="item_WorkCardInfo"     IsEnabled="False" Header="流转卡信息采集(快捷键 Alt + P + _I)"></MenuItem>
+                    <MenuItem Name="item_FinishReport"     IsEnabled="False" Header="完工报告(快捷键 Alt + P + _F)"></MenuItem>
                 </MenuItem>
                 <MenuItem Name="item_FileQuery"     Header="档案查询(_F)">
                     <MenuItem Name="item_FileQuery1" Click="item_FileQuery1_Click" IsEnabled="False" Header="查询(_S)"></MenuItem>
